deploy/k8s/api/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: menuapi-java
  labels:
    app.kubernetes.io/name: menuapi-java
    app.kubernetes.io/component: api-java
    app.kubernetes.io/part-of: menu
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: menuapi-java
      app.kubernetes.io/component: api-java
      app.kubernetes.io/part-of: menu
  template:
    metadata:
      labels:
        app.kubernetes.io/name: menuapi-java
        app.kubernetes.io/component: api-java
        app.kubernetes.io/part-of: menu
    spec:
##      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: api
          image: api-image:tag
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 9001
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 9001
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
